--- a/main.html
+++ b/main.html
@@ -9,10 +9,25 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<ol>
-		shoppingList
+		<li data-ns-test="shoppingList">
+			sdsd
+		</li>
+		<li data-ns-test="shoppingList">
+			sd
+		</li><li data-ns-test="shoppingList">
+			fd
+		</li>
 	</ol>
 	<ul>
-		holidayList
+		<li data-ns-test="holidayList">
+			fdcxc
+		</li>
+		<li data-ns-test="holidayList">
+			fdvvbg
+		</li>
+		<li data-ns-test="holidayList">
+			fdbv
+		</li>
 	</ul>
     <script type="text/javascript" src="./script.js">
 </script>
